[gd_scene load_steps=8 format=3 uid="uid://dt54h51rrr6hy"]

[ext_resource type="Script" path="res://TileMapNav.gd" id="1_f531s"]
[ext_resource type="Texture2D" uid="uid://b30wc45n3loar" path="res://Tiles Big.png" id="2_jysdn"]
[ext_resource type="Texture2D" uid="uid://ft4ngdxru14c" path="res://Gobot.svg" id="3_0w7hj"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_qjspx"]
vertices = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
polygons = [PackedInt32Array(0, 1, 2, 3)]
outlines = [PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eaei1"]
texture = ExtResource("2_jysdn")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_qjspx")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_0aypw"]
tile_size = Vector2i(100, 100)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_eaei1")

[sub_resource type="CircleShape2D" id="CircleShape2D_4tcnc"]
radius = 32.1403

[node name="Node2d" type="Node2D"]
script = ExtResource("1_f531s")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_0aypw")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 65542, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 65543, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 65544, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 65545, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 65546, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 262144, 0, 0)

[node name="CharacterBody2d" type="CharacterBody2D" parent="."]
position = Vector2(100, 50)

[node name="Sprite2d" type="Sprite2D" parent="CharacterBody2d"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0w7hj")

[node name="NavigationAgent2d" type="NavigationAgent2D" parent="CharacterBody2d"]
navigation_layers = 2
avoidance_enabled = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="CharacterBody2d"]
shape = SubResource("CircleShape2D_4tcnc")

[node name="Polygon2d" type="Polygon2D" parent="."]
color = Color(0, 0, 1, 0.266667)

[node name="NavigationRegion2d" type="NavigationRegion2D" parent="."]
position = Vector2(-2, 8)
navigation_layers = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="path_changed" from="CharacterBody2d/NavigationAgent2d" to="." method="_on_navigation_agent_2d_path_changed"]
[connection signal="velocity_computed" from="CharacterBody2d/NavigationAgent2d" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
